--- a/registro.html
+++ b/registro.html
@@ -1,1 +1,2 @@
 <h1>registro de login</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et iure autem nulla! Culpa cumque animi iure consectetur necessitatibus hic aut doloribus pariatur modi perferendis? Maxime, veritatis voluptatum! Similique, nulla sapiente.</p>
